--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.3'
+    }
+}
+
+
 plugins {
     id 'com.android.application' version '7.2.0-beta01' apply false
     id 'com.android.library' version '7.2.0-beta01' apply false
@@ -7,3 +14,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
