--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.UnoFinal"
         tools:targetApi="31">
         <activity
+            android:name=".CardTestHorizontal"
+            android:exported="false" />
+        <activity
             android:name=".CardActivityTest"
             android:exported="false" />
         <activity
