--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         android:theme="@style/Theme.UnoFinal"
         tools:targetApi="31">
         <activity
+            android:name=".Help"
+            android:exported="false" />
+        <activity
+            android:name=".PlayerCards"
+            android:exported="false" />
+        <activity
             android:name=".MiddleScreen"
             android:exported="false" />
         <activity
