Revert "Merge remote-tracking branch 'origin/BotTest'"
This reverts commit 6dd4b938e308b0a56853250807d644c2a644120a, reversing
changes made to 9bbd5c9cc51a1c012cf066fbcbbc0e5fc021031c.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,22 +24,25 @@
         android:theme="@style/Theme.UnoFinal"
         tools:targetApi="31">
         <activity
-            android:name=".Help"
-            android:exported="false" />
-        <activity
-            android:name=".PlayerCards"
-            android:exported="false" />
-        <activity
             android:name=".MiddleScreen"
             android:exported="false" />
         <activity
-            android:name=".Card"
+            android:name=".CardTestHorizontal"
+            android:exported="false" />
+        <activity
+            android:name=".CardActivityTest"
             android:exported="false" />
         <activity
             android:name=".ColorChange"
             android:exported="false" />
         <activity
-            android:name=".Win"
+            android:name=".Leaderboard"
+            android:exported="false" />
+        <activity
+            android:name=".CardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Play"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
